--- a/style.css
+++ b/style.css
@@ -1,273 +1,532 @@
-* {
-    background-color: black;
-    margin: 0px; 
-
-    /* background-image: url("pro.png"); 
-    background-repeat: no-repeat;
-    background-size: cover; */
-}
-
-.nav{
-    text-align: center;
-    color: aliceblue;
-    display: flex;
-    background-color: black;
-    justify-content: space-around;
-    height: 50px;
-    PADDING: 15px;
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: url("62624.jpg");
+    font-family: 'Roboto', sans-serif;
+    position: absolute;
 }
 
 a{
-    color: aliceblue;
-    background-color: #C1E8FF;
     text-decoration: none;
+    color: black;
 }
 
-.button {   
-    height: 50px;
-    width: 100px;
-    padding-bottom: 10px;
-    padding-left: 15px;
-    text-align: center;
-    color: aliceblue;
-    display: inline-block;
-    text-decoration: none;
-    background-color: #ff4f79;
-}
-
-.navBar {
-    margin: 10px;
-    height: 50px; 
-    
-    text-align: center;
-    color: aliceblue;
+.title {
     display: flex;
-    background-color: black;
-    justify-content: space-around;
-    PADDING: 15px;
+    width: 83%;
+    justify-content: space-between;
+    margin-left: 5%;
 }
 
-h1 {
-    text-align: center;
-    color: aliceblue;
-    background-color: black;
+.main {
+    height: 82vh;
+    margin-top: -20px;
+    margin-left: 20px;
 }
 
-.home{
+.content {
+    height: 64vh;
+    margin-left: 5%;
+    display: flex;
+    color: black;
+}
+
+h1, h2{
     height: 50px;
-    width: 150px;
-    margin-right: 50px;
-    text-decoration: none;
-    background-color: #C1E8FF;
-    border: 5px solid white;
-    border-radius: 30px;
-}
-
-.achivement{
-    height: 50px;
-    width: 150px;
-    margin-right: 50px;
-    text-decoration: none;
-    background-color: #C1E8FF;
-    border: 5px solid white;
-    border-radius: 30px;
-}
-
-.member {
-    height: 50px;
-    width: 150px;
-    margin-right: 50px;
-    text-decoration: none;
-    background-color: #C1E8FF;
-    border: 5px solid white;
-    border-radius: 25px 25px;
-}
-
-.pro {
-    height: 50px;
-    width: 150px;
-    margin-right: 50px;
-    text-decoration: none;
-    background-color: #C1E8FF;
-    border: 5px solid white;
-    border-radius: 25px 25px;
-}
-
-.one{
-    color: #021024;
-}
-
-.container{
-    background: url("background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 800px;
-    width: 900px;
+    padding-top: 20px;
     align-items: center;
-    margin-left: 400px;
+    justify-content: center;
+    display: flex;
 }
 
-.icon {
-    font-size: 24px; /* Set the font size of the icon */
-    margin-right: 50px; /* Add some right margin for spacing */
+p {
+    color: black;
+    font-size: 20px;
+    text-align: center;
+}
+
+.fb, .li, .ig, .x {
+    padding: 5px;
+}
+
+.fb:hover, .li:hover, .ig:hover, .x:hover {
+    transform: scale(1.3);
+}
+
+.li a {
+    text-decoration: none;
+    color: black;
+}
+
+.con {
+    width: 50px;
+    height: 50px;
+    margin: 25px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 10px;
-    display: block;/*display to be flex*/
-    align-items: center; /* Align items vertically in the center*/
-}
-
-.contactButton {
-    background-color: #C1E8FF;
-    background: #C1E8FF;
-    color: white;
-    font-family: inherit;
-    padding: 0.45em;
-    padding-left: 1em;
-    font-size: 17px;
-    font-weight: 500;
-    border-radius: 0.9em;
-    border: none;
-    cursor: pointer;
-    letter-spacing: 0.05em;
-    display: flex;
-    align-items: center;
-    box-shadow: inset 0 0 1.6em -0.6em #021024;
-    overflow: hidden;
+    background-color: #f0f0f0;
     position: relative;
-    height: 2.8em;
-    padding-right: 3em;
-    right: 0;
-  }
-  
-  .iconButton {
-    margin-left: 1em;
-    position: absolute;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.con1 {
+    width: 50px;
+    height: 50px;
+    margin: 30px;
+    /* margin-left: 50px; */
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 2.2em;
-    width: 2.2em;
-    border-radius: 0.7em;
-    box-shadow: 0.1em 0.1em 0.6em 0.2em #7a8cf3;
-    right: 0.3em;
-    transition: all 0.3s;
-  }
-  
-  .contactButton:hover {
-    transform: translate(-0.05em, -0.05em);
-    box-shadow: 0.15em 0.15em #5566c2;
-  }
-  
-  .contactButton:active {
-    transform: translate(0.05em, 0.05em);
-    box-shadow: 0.05em 0.05em #5566c2;
-  }
-  
-p{
-    font-size: larger;
-    color: aliceblue;
-    font-weight: 100;
+    padding: 10px;
+    background-color: #f0f0f0;
+    position: relative;
+    cursor: pointer;
+    text-decoration: none;
 }
 
-footer{
+.con i {
+    font-size: 24px;
+    transition: opacity 0.3s ease;
+}
+
+.con1 i {
+    font-size: 24px;
+    transition: opacity 0.3s ease;
+}
+
+.con img {
+    width: 20px;
+    height: 20px;
+    transition: opacity 0.3s ease;
+}
+
+.con-name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    font-size: 14px;
+}
+
+.con:hover i, .con:hover img {
+    opacity: 0;
+}
+
+.con:hover .con-name {
+    opacity: 1;
+}
+
+.con1 img {
+    width: 20px;
+    height: 20px;
+    transition: opacity 0.3s ease;
+}
+
+.con1-name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    font-size: 14px;
+}
+
+.con1:hover i, .con1:hover img {
+    opacity: 0;
+}
+
+.con1:hover .con1-name {
+    opacity: 1;
+}
+
+.log {
+    width: 80%;
+    margin: 20px auto;
+    padding: 0 20px;
+    border-radius: 15px;
+}
+
+button {
+    border: none;
+    color: #fff;
+    background-image: linear-gradient(30deg, #0400ff, #4ce3f7);
+    border-radius: 20px;
+    background-size: 100% auto;
+    font-family: inherit;
+    font-size: 17px;
+    padding: 0.6em 1.5em;
+   }
+   
+   button:hover {
+    background-position: right center;
+    background-size: 200% auto;
+    -webkit-animation: pulse 2s infinite;
+    animation: pulse512 1.5s infinite;
+   }
+   
+   @keyframes pulse512 {
+    0% {
+     box-shadow: 0 0 0 0 #05bada66;
+    }
+   
+    70% {
+     box-shadow: 0 0 0 10px rgb(218 103 68 / 0%);
+    }
+   
+    100% {
+     box-shadow: 0 0 0 0 rgb(218 103 68 / 0%);
+    }
+   }
+
+.connect {
+    height: 600px;
+    width: 10%;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 20px;
+    right: 85%;
+    padding-left: 10px;
     display: flex;
-    justify-content: space-around;
-    padding: 0%;
-    height: 50px;
-    background-color: #C1E8FF;
-    margin-top: 50px;
-    margin-bottom: 30px;
-    border-radius: 15px 15px 0px 0px;
-}
-
-b {
-    background-color: #C1E8FF;
-}
-
- ::-webkit-scrollbar {
-    width: 7px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: black;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #C1E8FF;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #052659;
-  } */
-
-.members {
-    background-color: #C1E8FF;
-    color: #052659;
-    /* margin-top: 100px; */
-    border: 2px solid white;
-    border-radius: 25px 25px 0px 0px;
-}
-
-.member-h1 {
-    border-radius: 25px 25px 0px 0px;
-    border: 2px solid white;
-    margin-top: 50px;
-}
-
-.members ol{
-    border: 2px solid white;
-    border-radius: 0px 0px 25px 25px;
-}
-
-.projects{
-    background-color: #C1E8FF;
-    color: #052659;
-    margin-top: 50px;
-    border: 2px solid white;
-    border-radius: 25px 25px 25px 25px;
-}
-
-.project-h1{
-    border-radius: 25px 25px 0px 0px;
-    border: 0px solid white;
-}
-
-.projects ol{
-    border-radius: 25px 25px 25px 25px;
-}
-
-li{
-    background-color: #C1E8FF;
-    height: 50px;
-    display: block;
-}
-
-ol {
-    background-color: #C1E8FF;
-
-}
-
-.achivements{
     text-align: center;
-    display: block;
-    background-color: #C1E8FF;
     justify-content: center;
-    height: 500px;
-    width: 100%;
-    border: 2px solid white;
-    border-radius: 25px;
+    position: fixed;
+
 }
 
-.achivements-h1{
-    border-radius: 25px 25px 0px 0px;
+.about {
+    height: 125vh;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 20px;
+    /* margin-right: 100px; */
+    margin-left: 325px; 
+    width: 50%;
+}
+
+.shortcut {
+    text-align: center;
+    margin-top: 20px;  
+    margin-right: 105px;
+    position: fixed;
+    right: 0;
+}
+
+.main {
+    height: 82vh;
+    margin-top: -20px;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column; 
+    gap: 20px; 
+    align-items: center; 
+}
+
+.shortcut, .connect, .about {
+    background-color: white; 
+    border-radius: 10px;
+    padding: 20px; 
+}
+
+.text {
+    
+    width: 80%;
+    margin-left: 10%;
+    font-size: 16px;
+    margin-left: 60px;
+    width: 83vh;
+    font-size: 2.5vh;
+}
+
+.explain {
+    margin: 5px;
+    font-size: 15px;
+}
+
+.skills {
+    height: 50vh;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.pics {
+    gap: 20px;
+    height: 350px;
+    display: flex;
+}
+
+.blogs {
+    gap: 20px;
+    height: 350px;
+    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 img{
+    height: 180px;
+    width: 180px;
+    position: relative;
+}
+
+.practice{
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+.skill { 
+    background-color: transparent;  
+    background-image: linear-gradient(30deg, #0400ff, #4ce3f7);  
+    padding: 1%;
+    height: 30px; 
+    border-radius: 5px; 
+    margin-left: 10px;
+}
+
+.skill-container {
     display: flex;
-    height: 100px;
-    width: 100px;
-    margin-left: 50%;
-    margin-top: 20px;
+    align-items: center;
+    margin-bottom: 10px; 
+}
+
+.html {
+    width: 60%;
+    height: 5px;
+}
+
+.pic {
+    width: 80%;
+    height: 5px;
+}
+
+.mobile {
+    width: 50%;
+    height: 5px;
+}
+
+.ill {
+    width: 90%;
+    height: 5px;
+}
+
+.what_i_do {
+    margin: 40px;
+    height: 28rem;
+    grid-template-columns: auto;
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.ui {
+    padding: 2px;
+    height: 14rem;
+    background-color: antiquewhite;
+    margin: 20px 0px 0px 20px;
+    border-radius: 15px;
+}
+
+.app {
+    padding: 2px;
+    height: 14rem;
+    background-color: #bbb2bd;
+    margin: 20px 0px 0px 20px;
+    border-radius: 15px;
+}
+
+.events {
+    width: 800px;    
+}
+
+.event {
+    width: 800px;
+    margin-top: 150px;
+}
+
+.all-blogs {
+    /* background-color: antiquewhite; */
+    min-height: 800px;
+    width: 100%;
+}
+
+.events:hover .loa:not(:hover) {
+    filter: blur(2.5px);
+}
+
+.event:hover .loa:not(:hover) {
+    filter: blur(2.5px);
+}
+
+.all-blogs:hover .loa:not(:hover) {
+    filter: blur(2.5px);
+}
+
+.loa {  
+    position: relative;
+    width: 210px;
+    min-height: 200px;
+    box-sizing: border-box;
+    background-color: #212121;
+    border: 5px solid #222;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 10px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+                rgba(0, 0, 0, 0.23) 0px 6px 6px,
+                inset rgba(0, 0, 0, 0.19) 0px 10px 20px,
+                inset rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    transition: all ease-in-out 0.3s;
+    overflow: hidden;
+    transition: transform 0.8s ease;
+    align-items: flex-start; 
+}
+
+  
+  .loa:hover {
+    box-shadow: rgba(193, 44, 223, 0.19) 0px 10px 20px,
+            rgba(193, 44, 223, 0.23) 0px 6px 6px,
+            inset rgba(0, 0, 0, 0.19) 0px 10px 20px,
+            inset rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border: 5px solid #b671d6;
+    transform: scale(1.2);
+    filter: blur(0);
+  }
+  
+  .loa-title {
+    margin: 0;
+    font-size: 18px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+            "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    color: #fff;
+    cursor: default;
+  }
+  
+  .loa-des {
+    margin: 0;
+    font-size: 15px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+            "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    color: #fff;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    display: -webkit-box;
+    word-break: break-all;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    cursor: default;
+  }
+  
+  .loa-text {
+    position: absolute;
+    margin: 0;
+    font-size: 14px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+            "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    color: #fff;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    opacity: 0;
+    transition: all ease-in-out 0.3s;
+    animation: textanimate 0.8s alternate infinite;
+    cursor: pointer;
+  }
+  
+  .loa:hover > .loa-text {
+    opacity: 1;
+  }
+  
+  @keyframes textanimate {
+    0% {
+      right: 20px;
+    }
+  
+    100% {
+      right: 10px;
+    }
+  }
+  
+  .arrow-icon {
+    font-size: 15px;
+    font-weight: 500;
+  }
+
+.photo {
+    padding: 2px;
+    height: 14rem;
+    background-color: #bbb2bd;
+    margin: 20px 0px 0px 20px;
+    border-radius: 15px;
+}
+
+.web{
+    padding: 2px;
+    height: 14rem;
+    background-color: antiquewhite;
+    margin: 20px 0px 0px 20px;
+    border-radius: 15px;
+}
+
+.st {   
+    font-size: 20px;
+    width: 100%;
+    /* padding: 50px 0; */
+    margin: 0px 0;
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
+    color: black;
+    text-decoration: none;
+}
+
+.re {
+    text-decoration: none;
+    color: black;
+}
+
+.pics, .blogs {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    gap: 20px;
+}
+
+img {
+    display: block;
+    margin: 0 auto; 
+    height: 180px;
+    width: 180px;
+}
+
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px; 
+}
+
+.blogs img {
+    display: block;
+    margin: 0 auto; 
+}
+
+.about, .connect, .shortcut {
+    flex-direction: column;
+    align-items: center; 
+}
+
+.contact-title {
+    margin-right: -60px;
 }
